refactor(core): update GitHubIssue model, improve ranking, enhance query building, and adapt tests